adding a obj2sdf converter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,10 @@ ADD_LIBRARY(quartet ${SRC})
 
 ADD_EXECUTABLE(quartet_cmdline ${CMDLINE_SRC})
 TARGET_LINK_LIBRARIES(quartet_cmdline quartet)
+ADD_EXECUTABLE(quartet_sdf src/main_sdf.cpp) 
+TARGET_LINK_LIBRARIES(quartet_sdf quartet)
+ADD_EXECUTABLE(obj2sdf src/obj_to_sdf.cpp)
+TARGET_LINK_LIBRARIES(obj2sdf quartet)
 
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLUT REQUIRED)
